force-app/main/default/objects/Subscribed_Products__c/Subscribed_Products__c.object-meta.xml
<CustomObject>
    <description>The combination of suppliers and its corresponding products that are being bought by the customers (locations).</description>
    <label>Subscribed Product</label>
    <nameField>
        <displayFormat>SP-{00000}</displayFormat>
        <label>Subscribed Products Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscribed Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>