force-app/main/default/objects/Subscribed_Products__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The location to which the subscribed product is being applied.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Subscribed Products</relationshipLabel>
    <relationshipName>Subscribed_Products</relationshipName>
    <type>Lookup</type>
</CustomField>