force-app/main/default/objects/Subscribed_Products__c/fields/Enqix_BID_Location_Limit_Period__c.field-meta.xml
<CustomField>
    <fullName>Enqix_BID_Location_Limit_Period__c</fullName>
    <label>Location Limit Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Half-year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>