force-app/main/default/objects/Subscribed_Products__c/fields/Enqix_BID_Location_Limit_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Enqix_BID_Location_Limit_Quantity__c</fullName>
    <label>Quantity Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>