force-app/main/default/objects/Subscribed_Products__c/fields/IsActiveSupplier__c.field-meta.xml
<CustomField>
    <fullName>IsActiveSupplier__c</fullName>
    <formula>OR(ISBLANK(Supplier__c), Supplier__r.Supplier_Active__c)</formula>
    <label>Active Supplier?</label>
    <type>Checkbox</type>
</CustomField>