force-app/main/default/objects/Subscribed_Products__c/fields/Last_Discount_Given__c.field-meta.xml
<CustomField>
    <fullName>Last_Discount_Given__c</fullName>
    <label>Last Discount Given(Used All Quantity)</label>
    <type>Date</type>
</CustomField>