force-app/main/default/objects/Subscribed_Products__c/fields/NextRefreshDate__c.field-meta.xml
<CustomField>
    <fullName>NextRefreshDate__c</fullName>
    <label>NextRefreshDate</label>
    <type>Date</type>
</CustomField>