force-app/main/default/objects/Subscribed_Products__c/fields/Partnership__c.field-meta.xml
<CustomField>
    <fullName>Partnership__c</fullName>
    <formula>Account__r.Partnership__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partnership</label>
    <type>Text</type>
</CustomField>