force-app/main/default/objects/Subscribed_Products__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product associated to this subscription.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Subscribed Products</relationshipLabel>
    <relationshipName>Subscribed_Products</relationshipName>
    <type>Lookup</type>
</CustomField>