force-app/main/default/objects/Subscribed_Products__c/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <formula>Product__r.Case_Safe_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProductId</label>
    <type>Text</type>
</CustomField>