force-app/main/default/objects/Subscribed_Products__c/fields/Quantity_Remaining2__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Remaining2__c</fullName>
    <description>new Quantity Remaining</description>
    <formula>IF(ISBLANK(Enqix_BID_Location_Limit_Quantity__c) ,100000000 - IF(ISBLANK(quantityOrdered__c), 0, quantityOrdered__c), Enqix_BID_Location_Limit_Quantity__c - IF(ISBLANK(quantityOrdered__c), 0, quantityOrdered__c))</formula>
    <inlineHelpText>new Quantity Remaining</inlineHelpText>
    <label>Quantity Remaining_</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>