force-app/main/default/objects/Subscribed_Products__c/fields/Quantity_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Remaining__c</fullName>
    <label>Quantity Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>