force-app/main/default/objects/Subscribed_Products__c/fields/quantityOrdered__c.field-meta.xml
<CustomField>
    <fullName>quantityOrdered__c</fullName>
    <label>quantityOrdered</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>