force-app/main/default/objects/Subscribed_Products__c/fields/Showinmyproducts__c.field-meta.xml
<CustomField>
    <fullName>Showinmyproducts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Showinmyproducts</label>
    <type>Checkbox</type>
</CustomField>