force-app/main/default/objects/Subscribed_Products__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The supplier that is providing the product in the subscription (if applicable).</description>
    <label>Supplier</label>
    <referenceTo>Suppliers__c</referenceTo>
    <relationshipLabel>Subscribed Products</relationshipLabel>
    <relationshipName>Subscribed_Products</relationshipName>
    <type>Lookup</type>
</CustomField>