force-app/main/default/objects/Subscribed_Products__c/fields/SupplierProduct__c.field-meta.xml
<CustomField>
    <fullName>SupplierProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Supplier_Product__c.Supplier__c</field>
            <operation>equals</operation>
            <valueField>$Source.Supplier__c</valueField>
        </filterItems>
        <filterItems>
            <field>Supplier_Product__c.IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Supplier_Product__c</referenceTo>
    <relationshipLabel>Subscribed Products</relationshipLabel>
    <relationshipName>SubscribedProducts</relationshipName>
    <type>Lookup</type>
</CustomField>