force-app/main/default/objects/Subscribed_Products__c/validationRules/Account_must_not_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_must_not_be_blank</fullName>
    <active>true</active>
    <description>Account must not be blank - excludes pentaho and portal users</description>
    <errorConditionFormula>AND(ISBLANK( Account__c ), $User.LastName &lt;&gt; &apos;Loader&apos; ,$User.LastName &lt;&gt; &apos;Portal&apos;, $User.LastName &lt;&gt; &apos;Allen&apos;)</errorConditionFormula>
    <errorMessage>Subscribed product must have an account</errorMessage>
</ValidationRule>