force-app/main/default/objects/Subscribed_Products__c/validationRules/Product_must_not_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_must_not_be_blank</fullName>
    <active>true</active>
    <description>Product must not be black - pentaho loader and portal user are excluded.</description>
    <errorConditionFormula>AND(ISBLANK(  Product__c ), $User.LastName &lt;&gt; &apos;Loader&apos; ,$User.LastName &lt;&gt; &apos;Portal&apos;, $User.LastName &lt;&gt; &apos;Allen&apos;)</errorConditionFormula>
    <errorMessage>Product must not be blank</errorMessage>
</ValidationRule>