force-app/main/default/objects/Subscribed_Products__c/validationRules/Quantity_Limit_not_be_less_than_Remainin.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Limit_not_be_less_than_Remainin</fullName>
    <active>false</active>
    <errorConditionFormula>IF(Enqix_BID_Location_Limit_Quantity__c &lt; Quantity_Remaining__c,True,False)</errorConditionFormula>
    <errorDisplayField>Quantity_Remaining__c</errorDisplayField>
    <errorMessage>Quantity remaining must be less than Quantity Limit</errorMessage>
</ValidationRule>