force-app/main/default/objects/Subscribed_Products__c/validationRules/RestrictSupplierProductBeforeStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictSupplierProductBeforeStartDate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(ISNEW(), ISCHANGED(SupplierProduct__c)), NOT(OR(ISBLANK(StartDate__c), ISBLANK(SupplierProduct__r.Start_Date__c), StartDate__c &gt;= SupplierProduct__r.Start_Date__c)))</errorConditionFormula>
    <errorDisplayField>StartDate__c</errorDisplayField>
    <errorMessage>The Start Date of Subscribed Product cannot be before the Start Date of the Supplier Product</errorMessage>
</ValidationRule>