force-app/main/default/objects/Subscribed_Products__c/validationRules/RestrictSupplierProductExceedingEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictSupplierProductExceedingEndDate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(ISNEW(), ISCHANGED(SupplierProduct__c)), NOT(OR(ISBLANK(EndDate__c), ISBLANK(SupplierProduct__r.End_Date__c), EndDate__c &lt;= SupplierProduct__r.End_Date__c)))</errorConditionFormula>
    <errorDisplayField>EndDate__c</errorDisplayField>
    <errorMessage>The End Date of the Subscribed Product cannot exceed the End Date of the Supplier Product.</errorMessage>
</ValidationRule>