force-app/main/default/objects/Subscribed_Products__c/validationRules/Supplier_must_not_be_First_Mile_Ltd.validationRule-meta.xml
<ValidationRule>
    <fullName>Supplier_must_not_be_First_Mile_Ltd</fullName>
    <active>true</active>
    <description>Blocks the user from saving a subscribed product with first mile ltd as the supplier</description>
    <errorConditionFormula>Supplier__r.Name = &apos;First Mile Ltd&apos;</errorConditionFormula>
    <errorMessage>Supplier must not be First Mile. Please leave the Supplier field blank in this instance</errorMessage>
</ValidationRule>