force-app/main/default/objects/Subscribed_Products__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Enqix_ID__c</columns>
    <columns>Account__c</columns>
    <columns>Product__c</columns>
    <columns>Supplier__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>